--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Title:</strong>
   <%= @todo_list.title %>
@@ -12,7 +10,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @todo_list.user %>
+  <%= @todo_list.user.username %>
 </p>
 
 <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
