--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <% if current_user %>
   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
-
+  <%= link_to 'Lists', todo_lists_path %>
 <% else %>
   <%= link_to 'Sign Up', new_user_registration_path %>
 
